chore: fix build script